# ThreadSynthAI

./: .replit  agents.py  app.py  config.json  config.py  models.py  pyproject.toml  replit.nix  schema.sql  supabase_client.py
instance/: threads.db
static/css/: custom.css
static/js/: main.js
templates/: base.html  config.html  index.html  login.html  register.html  thread.html
