[project]
name = "repl-nix-threadsynthai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "openai>=1.55.3",
    "langchain>=0.3.9",
    "langgraph>=0.2.53",
    "unstructured>=0.16.8",
    "langchain-community>=0.3.8",
    "langchain-unstructured",
    "langchain-core",
]
